// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropDown.svelte > should close drop down on escape key 1`] = `
<drop-down
  aria-controls="menu"
  aria-haspopup="true"
  class="dropdown relative flex cursor-pointer select-none open"
>
  <button
    class="flex items-center"
    tabindex="0"
  >
    <span
      class="flex items-center"
    >
      <!---->
       
      <!---->
       
      <rkt-icon
        aria-label="selector-opened"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="selector-opened"
        />
      </rkt-icon>
      <!---->
    </span>
  </button>
   
  <scroll
    class="absolute z-10 flex w-full flex-col overflow-scroll menu"
    style="top: 4px;"
  >
    <list
      aria-label="list"
      class="flex w-full flex-shrink-0 select-none flex-col list"
      role="listbox"
      tabindex="-1"
    >
      <!---->
       
      <!---->
      <item
        aria-selected="false"
        class="item"
        data-path="0"
        role="option"
      >
        <!---->
        <!---->
        <!---->
        
        
        <!---->
         
        <p>
          a
        </p>
        <!---->
        <!---->
      </item>
      <item
        aria-selected="true"
        class="item"
        data-path="1"
        role="option"
      >
        <!---->
        <!---->
        <!---->
        
        
        <!---->
         
        <p>
          b
        </p>
        <!---->
        <!---->
      </item>
      <item
        aria-selected="false"
        class="item"
        data-path="2"
        role="option"
      >
        <!---->
        <!---->
        <!---->
        
        
        <!---->
         
        <p>
          c
        </p>
        <!---->
        <!---->
      </item>
      
      <!---->
    </list>
    <!---->
  </scroll>
  <!---->
</drop-down>
`;

exports[`DropDown.svelte > should close drop down on escape key 2`] = `
<drop-down
  aria-controls="menu"
  aria-haspopup="true"
  class="dropdown relative flex cursor-pointer select-none"
>
  <button
    class="flex items-center"
    tabindex="0"
  >
    <span
      class="flex items-center"
    >
      <!---->
       
      <!---->
       
      <rkt-icon
        aria-label="selector-closed"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="selector-closed"
        />
      </rkt-icon>
      <!---->
    </span>
  </button>
   
  <scroll
    class="absolute z-10 flex w-full flex-col overflow-scroll menu"
    style="top: 4px;"
  >
    <list
      aria-label="list"
      class="flex w-full flex-shrink-0 select-none flex-col list"
      role="listbox"
      tabindex="-1"
    >
      <!---->
       
      <!---->
      <item
        aria-selected="false"
        class="item"
        data-path="0"
        role="option"
      >
        <!---->
        <!---->
        <!---->
        
        
        <!---->
         
        <p>
          a
        </p>
        <!---->
        <!---->
      </item>
      <item
        aria-selected="true"
        class="item"
        data-path="1"
        role="option"
      >
        <!---->
        <!---->
        <!---->
        
        
        <!---->
         
        <p>
          b
        </p>
        <!---->
        <!---->
      </item>
      <item
        aria-selected="false"
        class="item"
        data-path="2"
        role="option"
      >
        <!---->
        <!---->
        <!---->
        
        
        <!---->
         
        <p>
          c
        </p>
        <!---->
        <!---->
      </item>
      
      <!---->
    </list>
    <!---->
  </scroll>
  <!---->
</drop-down>
`;

exports[`DropDown.svelte > should render items using custom component 1`] = `
<div>
  <drop-down
    aria-controls="menu"
    aria-haspopup="true"
    class="dropdown relative flex cursor-pointer select-none "
  >
    <button
      class="flex items-center"
      tabindex="0"
    >
      <span
        class="flex items-center"
      >
        <!---->
         
        <!---->
         
        <rkt-icon
          aria-label="selector-closed"
          class="flex flex-shrink-0 items-center justify-center "
          role="img"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-closed"
          />
        </rkt-icon>
        <!---->
      </span>
    </button>
     
    <!---->
  </drop-down>
  
</div>
`;

exports[`DropDown.svelte > should render items using custom component 2`] = `
<div>
  <drop-down
    aria-controls="menu"
    aria-haspopup="true"
    class="dropdown relative flex cursor-pointer select-none "
  >
    <button
      class="flex items-center"
      tabindex="0"
    >
      <span
        class="flex items-center"
      >
        <!---->
         
        <!---->
         
        <rkt-icon
          aria-label="selector-closed"
          class="flex flex-shrink-0 items-center justify-center "
          role="img"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-closed"
          />
        </rkt-icon>
        <!---->
      </span>
    </button>
     
    <!---->
  </drop-down>
  
</div>
`;

exports[`DropDown.svelte > should render items using custom component 3`] = `
<div>
  <drop-down
    aria-controls="menu"
    aria-haspopup="true"
    class="dropdown relative flex cursor-pointer select-none "
  >
    <button
      class="flex items-center"
      tabindex="0"
    >
      <span
        class="flex items-center"
      >
        <!---->
         
        <!---->
         
        <rkt-icon
          aria-label="selector-closed"
          class="flex flex-shrink-0 items-center justify-center "
          role="img"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-closed"
          />
        </rkt-icon>
        <!---->
      </span>
    </button>
     
    <!---->
  </drop-down>
  
</div>
`;

exports[`DropDown.svelte > should render items using custom mapping 1`] = `
<div>
  <drop-down
    aria-controls="menu"
    aria-haspopup="true"
    class="dropdown relative flex cursor-pointer select-none "
  >
    <button
      class="flex items-center"
      tabindex="0"
    >
      <span
        class="flex items-center"
      >
        <!---->
         
        <!---->
         
        <rkt-icon
          aria-label="selector-closed"
          class="flex flex-shrink-0 items-center justify-center "
          role="img"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-closed"
          />
        </rkt-icon>
        <!---->
      </span>
    </button>
     
    <!---->
  </drop-down>
  
</div>
`;

exports[`DropDown.svelte > should render items using default component, when invalid component is provided 1`] = `
<div>
  <drop-down
    aria-controls="menu"
    aria-haspopup="true"
    class="dropdown relative flex cursor-pointer select-none "
  >
    <button
      class="flex items-center"
      tabindex="0"
    >
      <span
        class="flex items-center"
      >
        <!---->
         
        <!---->
         
        <rkt-icon
          aria-label="selector-closed"
          class="flex flex-shrink-0 items-center justify-center "
          role="img"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-closed"
          />
        </rkt-icon>
        <!---->
      </span>
    </button>
     
    <!---->
  </drop-down>
  
</div>
`;

exports[`DropDown.svelte > should render items using field mapping 1`] = `
<div>
  <drop-down
    aria-controls="menu"
    aria-haspopup="true"
    class="dropdown relative flex cursor-pointer select-none "
  >
    <button
      class="flex items-center"
      tabindex="0"
    >
      <span
        class="flex items-center"
      >
        <!---->
         
        <!---->
         
        <rkt-icon
          aria-label="selector-closed"
          class="flex flex-shrink-0 items-center justify-center "
          role="img"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-closed"
          />
        </rkt-icon>
        <!---->
      </span>
    </button>
     
    <!---->
  </drop-down>
  
</div>
`;

exports[`DropDown.svelte > should render string array 1`] = `
<div>
  <drop-down
    aria-controls="menu"
    aria-haspopup="true"
    class="dropdown relative flex cursor-pointer select-none open"
  >
    <button
      class="flex items-center"
      tabindex="0"
    >
      <span
        class="flex items-center"
      >
        <!---->
         
        <!---->
         
        <rkt-icon
          aria-label="selector-opened"
          class="flex flex-shrink-0 items-center justify-center "
          role="img"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-opened"
          />
        </rkt-icon>
        <!---->
      </span>
    </button>
     
    <scroll
      class="absolute z-10 flex w-full flex-col overflow-scroll menu"
      style="top: 4px;"
    >
      <list
        aria-label="list"
        class="flex w-full flex-shrink-0 select-none flex-col list"
        role="listbox"
        tabindex="-1"
      >
        <!---->
         
        <!---->
        <item
          aria-selected="false"
          class="item"
          data-path="0"
          role="option"
        >
          <!---->
          <!---->
           
          <p>
            One
          </p>
          <!---->
          <!---->
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="1"
          role="option"
        >
          <!---->
          <!---->
           
          <p>
            Two
          </p>
          <!---->
          <!---->
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="2"
          role="option"
        >
          <!---->
          <!---->
           
          <p>
            Three
          </p>
          <!---->
          <!---->
        </item>
        
        <!---->
      </list>
      <!---->
    </scroll>
    <!---->
  </drop-down>
  
</div>
`;

exports[`DropDown.svelte > should render string array 2`] = `
<div>
  <drop-down
    aria-controls="menu"
    aria-haspopup="true"
    class="dropdown relative flex cursor-pointer select-none open"
  >
    <button
      class="flex items-center"
      tabindex="0"
    >
      <span
        class="flex items-center"
      >
        <rkt-icon
          aria-label="theme"
          class="flex flex-shrink-0 items-center justify-center "
          role="img"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="theme"
          />
        </rkt-icon>
        <!---->
         
        <!---->
         
        <rkt-icon
          aria-label="selector-opened"
          class="flex flex-shrink-0 items-center justify-center "
          role="img"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-opened"
          />
        </rkt-icon>
        <!---->
      </span>
    </button>
     
    <scroll
      class="absolute z-10 flex w-full flex-col overflow-scroll menu"
      style="top: 4px;"
    >
      <list
        aria-label="list"
        class="flex w-full flex-shrink-0 select-none flex-col list"
        role="listbox"
        tabindex="-1"
      >
        <!---->
         
        <!---->
        <item
          aria-selected="false"
          class="item"
          data-path="0"
          role="option"
        >
          <!---->
          <!---->
           
          <p>
            x
          </p>
          <!---->
          <!---->
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="1"
          role="option"
        >
          <!---->
          <!---->
           
          <p>
            y
          </p>
          <!---->
          <!---->
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="2"
          role="option"
        >
          <!---->
          <!---->
           
          <p>
            z
          </p>
          <!---->
          <!---->
        </item>
        
        <!---->
      </list>
      <!---->
    </scroll>
    <!---->
  </drop-down>
  
</div>
`;

exports[`DropDown.svelte > should render title 1`] = `
<button
  class="flex items-center"
  tabindex="0"
>
  <span
    class="flex items-center"
  >
    <rkt-icon
      aria-label="theme"
      class="flex flex-shrink-0 items-center justify-center "
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="theme"
      />
    </rkt-icon>
    <!---->
     
    <p
      class="flex w-full"
    >
      Select a value
    </p>
    <!---->
     
    <rkt-icon
      aria-label="selector-closed"
      class="flex flex-shrink-0 items-center justify-center "
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="selector-closed"
      />
    </rkt-icon>
    <!---->
  </span>
</button>
`;

exports[`DropDown.svelte > should render title 2`] = `
<button
  class="flex items-center"
  tabindex="0"
>
  <span
    class="flex items-center"
  >
    <rkt-icon
      aria-label="theme"
      class="flex flex-shrink-0 items-center justify-center "
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="other"
      />
    </rkt-icon>
    <!---->
     
    <p
      class="flex w-full"
    >
      Select a value
    </p>
    <!---->
     
    <rkt-icon
      aria-label="selector-closed"
      class="flex flex-shrink-0 items-center justify-center "
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="selector-closed"
      />
    </rkt-icon>
    <!---->
  </span>
</button>
`;

exports[`DropDown.svelte > should render using icon only 1`] = `
<button
  class="flex items-center"
  tabindex="0"
>
  <span
    class="flex items-center"
  >
    <rkt-icon
      aria-label="theme"
      class="flex flex-shrink-0 items-center justify-center "
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="theme"
      />
    </rkt-icon>
    <!---->
     
    <!---->
     
    <rkt-icon
      aria-label="selector-closed"
      class="flex flex-shrink-0 items-center justify-center "
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="selector-closed"
      />
    </rkt-icon>
    <!---->
  </span>
</button>
`;

exports[`DropDown.svelte > should render using icon only 2`] = `
<div>
  <drop-down
    aria-controls="menu"
    aria-haspopup="true"
    class="dropdown relative flex cursor-pointer select-none "
  >
    <button
      class="flex items-center"
      tabindex="0"
    >
      <span
        class="flex items-center"
      >
        <rkt-icon
          aria-label="theme"
          class="flex flex-shrink-0 items-center justify-center "
          role="img"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="theme"
          />
        </rkt-icon>
        <!---->
         
        <!---->
         
        <rkt-icon
          aria-label="selector-closed"
          class="flex flex-shrink-0 items-center justify-center "
          role="img"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-closed"
          />
        </rkt-icon>
        <!---->
      </span>
    </button>
     
    <!---->
  </drop-down>
  
</div>
`;

exports[`DropDown.svelte > should toggle open state on focus change 1`] = `
<div>
  <drop-down
    aria-controls="menu"
    aria-haspopup="true"
    class="dropdown relative flex cursor-pointer select-none "
  >
    <button
      class="flex items-center"
      tabindex="0"
    >
      <span
        class="flex items-center"
      >
        <!---->
         
        <!---->
         
        <rkt-icon
          aria-label="selector-closed"
          class="flex flex-shrink-0 items-center justify-center "
          role="img"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="selector-closed"
          />
        </rkt-icon>
        <!---->
      </span>
    </button>
     
    <!---->
  </drop-down>
  
</div>
`;
